# abq-substrate-serpentine

./: .gitignore  README.md  abaqus.rpy  batch_generate_and_inp.py  build_solid_serpentine.py  config.ini  config.yaml  environment.yml  extract_all_odb_strechability.py  extract_all_odb_wire_deformation.py  extract_configs_to_json.py  extract_strechability.py  extract_wire_deformation.py  generate_from_json.py  generate_frome_ini.py  generate_params.py  justfile  pyproject.toml
.agents/workflows/: codex-cli-interaction.md
common_scripts/: inp_writer.py  job_generator.py  odb_viewport_setup.py  open_odb_recursive.py  submit.py  viewport_setup.py
conf/: config.yaml
memory-bank/: activeContext.md  config-defaults-reference.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
memory-bank/tasks/: TASK000-memory-bank-init.md  TASK001-flexible-analysis-steps.md  TASK002-unified-step-creation.md  TASK003-extract-substrate-common-code.md  TASK004-substrate-wire-config-context.md  TASK005-material-config-context.md  TASK006-mesh-seeding-config.md  TASK007-separate-config-classes.md  TASK008-readme-installation-guide.md  TASK009-config-toml-pydantic-refactor.md  TASK010-config-module-cleanup.md  TASK011-parts-init-absolute-imports.md  TASK012-dynamics-step-config.md  TASK013-wire-flip-refactor.md  TASK014-abaqus-env-setup.md  TASK015-rpy-path-le-postprocess-export.md  _index.md
params/: 001_uni_sig0p5_K2000p0.json  _index.md
postprocess/path_le_xcoord/: extract_path_le_xcoord.py  extract_path_le_xcoord_steps.py
postprocess/porosity_stretchability/: build_solid_serpentine.py  extract_all_odb_strechability.py  extract_all_odb_wire_deformation.py  extract_strechability.py  (+1 more)
src/model/: wire.py  (+3 more)
tests/: test_context.py  test_generate_params_cli.py  test_pydantic_models.py
(+27 files in other folders)
