[project]
name = "abq-serpentine-substrate"
version = "0.1.0"
description = "ABAQUS 蛇形导线-基底界面力学仿真自动化脚本"
readme = "README.md"
requires-python = "==3.10.*"
# ABAQUS Python 运行时依赖（abaqus python -m pip install -e . 时安装）
# hydra/pydantic 等本地 Python 依赖在 [dependency-groups].local 中
dependencies = ["pandas==2.3.3"]

[dependency-groups]
# 本地 Python 依赖（参数生成、配置验证等，仅 uv sync 时安装）
local = [
    "hydra-core==1.3.2",
    "hydra-list-sweeper==1.1.0",
    "numpy==1.26.4",
    "omegaconf==2.3.0",
    "pydantic==2.12.5",
    "scipy==1.15.3",
]
dev = [
    { include-group = "local" },
    "abqpy>=2024.9,<2025.0",     # 类型提示
    "pytest>=8.0.0",
]

[tool.uv]
add-bounds = "exact"

[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

